# ChangeLog for net-misc/logmein-hamachi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/logmein-hamachi/ChangeLog,v 1.16 2014/12/23 19:52:00 hwoarang Exp $

*logmein-hamachi-2.1.0.136 (23 Dec 2014)

  23 Dec 2014; Markos Chandras <hwoarang@gentoo.org>
  +logmein-hamachi-2.1.0.136.ebuild:
  Version bump. Fix homepage. Bug #533078. Thanks to Simone

*logmein-hamachi-2.1.0.130 (30 Aug 2014)

  30 Aug 2014; Markos Chandras <hwoarang@gentoo.org>
  +logmein-hamachi-2.1.0.130.ebuild:
  Version bump

*logmein-hamachi-2.1.0.119 (12 Oct 2013)

  12 Oct 2013; Tom Wijsman <TomWij@gentoo.org>
  +logmein-hamachi-2.1.0.119.ebuild, -logmein-hamachi-2.1.0.101-r1.ebuild,
  -logmein-hamachi-2.1.0.101.ebuild:
  Version bump to 2.1.0.119, proxied commit for Tianon; fixes bug #487596.

*logmein-hamachi-2.1.0.101-r1 (03 Sep 2013)

  03 Sep 2013; Pacho Ramos <pacho@gentoo.org> +files/logmein-hamachi.service,
  +logmein-hamachi-2.1.0.101-r1.ebuild:
  Add unit file (#478524)

*logmein-hamachi-2.1.0.101 (06 Jul 2013)

  06 Jul 2013; Michael Weber <xmw@gentoo.org> +logmein-hamachi-2.1.0.101.ebuild,
  -logmein-hamachi-2.1.0.86-r1.ebuild:
  Version bump by Simone Scanzoni (bug 475646).

*logmein-hamachi-2.1.0.86-r1 (09 Jan 2013)

  09 Jan 2013; Sergey Popov <pinkbyte@gentoo.org>
  -logmein-hamachi-2.1.0.81.ebuild, -logmein-hamachi-2.1.0.86.ebuild,
  +logmein-hamachi-2.1.0.86-r1.ebuild, files/logmein-hamachi.initd:
  Properly create /var/run/... directory in initscript, wrt bug #450872. Drop
  old versions

*logmein-hamachi-2.1.0.86 (02 Jan 2013)

  02 Jan 2013; Sergey Popov <pinkbyte@gentoo.org>
  -logmein-hamachi-2.1.0.76.ebuild, -logmein-hamachi-2.1.0.76-r1.ebuild,
  +logmein-hamachi-2.1.0.86.ebuild:
  Version bump, wrt bug #449712. Drop old versions, cause they are not
  available anymore, thanks to Matthias Blümel for discovering this issue

*logmein-hamachi-2.1.0.81 (22 Nov 2012)
