@@ -10,27 +10,30 @@ DIST logmein-hamachi-2.1.0.130-x64.tgz 1329616 SHA256 2125b34154018b860b8c89228c
 DIST logmein-hamachi-2.1.0.130-x86.tgz 1254910 SHA256 af37b52dcd51edf8634ff423919deaa212f91871fcaa73896758805030bcbec1 SHA512 d05b2007b3c2c6da4d4a88cbfec7d707759acbca287ab9a0891e4542af49c9552924945e302b9ceda558b3b90d85c72ecfede875a9e680b3a17783840c9a63aa WHIRLPOOL 2256664054ea343a7491e497b6747efcc14e159eac3feeee06b556035b0ee9aef829abb7cdd597d5f1f81387fccc12e78430b76b60990020eae791429a75aabd
 DIST logmein-hamachi-2.1.0.136-x64.tgz 1329616 SHA256 b336c90d39d41e7612fb183e61e0f8ac3c4b01ffe897ed8c753e6a670e5039e8 SHA512 9db413e8e59822a53b4686e6f60a68ac52f2d07ddfb8f7700cd8bfda87338bf104a10a8e083b1036ac1b7adc28e220abf821264d9411d669e8e354889733be03 WHIRLPOOL 7c62f7605e489f789475ad0c726aa64ec1fe294633ea795cc7a907602ec311ea2e0b9358a0ae9eda414c8424243bbd93257a8d3af88b4de763f4aa59dcf96054
 DIST logmein-hamachi-2.1.0.136-x86.tgz 1254908 SHA256 4c1aba487db2b71e155ff45c5986d76e6274b223b71a6c27babb25b15a6df99c SHA512 268a2e909e9de35096b6bf0392317ef21f153069f0211a97a54c8d219f20f09d9b508c3e0f6644c52e689863ace6f7b6e029b75ed3512d6b9dce3b0a9ff2f900 WHIRLPOOL cc1392951aa2a85603eb9d6d7259909285217c9f4a3186a751b0f2dcb1ba1d8c39d16ce9396a14d8ca95b486184c8118f5738049af9e6c29b1c52a3321c58a84
+DIST logmein-hamachi-2.1.0.139-x64.tgz 1329615 SHA256 2eda310852e09f34439e8afeeba1614e62a1e91e5aa3947ba530de7c8b5a3ac9 SHA512 e4c0a3de2361f707dfbe168bfa90543f139082624c04b121f3186ecb10aa56a9e9e942989cd1148d6a4fcabedba172bb1196206c14a1124b32d20154ee4be177 WHIRLPOOL f2e890945ccdf48ef409a145037de8a08e310928183c6cf7a2fb1c0f80f6143c4d4e98f88cdf54e754bea27dd1f1fd1fda844a33e702cf4171a2eacaeef08dbc
+DIST logmein-hamachi-2.1.0.139-x86.tgz 1254911 SHA256 103de9c76aceff78ce039dd48e7a71f43a627d833e58b63317e75ab1e2331d80 SHA512 49e5b57563e1599a71bc543c81bb1355b210d432a1daaf3975a1625aafd1cd46233fe8a1914d9309d8116d597abc42cd8cfd75e0729eed4bc379eaab30c808e4 WHIRLPOOL bb014a77f272589a93caadbf162696326849fa8b2398a4a768ab0adf685678debffada0db5a5dbd037afc0141cf771eff15ef13c7c4e91616c1c64df8b5306d5
 EBUILD logmein-hamachi-2.1.0.119.ebuild 1837 SHA256 c748267c0f2d1e5a3ffbf8173a780849ac9382c2a9be151efb6857d21f041b2e SHA512 8d617101e7f67c1da6fe7fdb471b2b2953f36fc4919495f2e34e072ec50b5c9f9e36154ae4e215f90df4ffd1cac52be807d398901ffcb8a201ddb760ec647f42 WHIRLPOOL 3905b64021ca3afad0c2be8371cc2aa6d027ede67690b8de4f69d8180b58383e33bc72403f2cf37cbe3f907bd2666dc8196fcf794c5092be0b20c3835481884d
 EBUILD logmein-hamachi-2.1.0.130.ebuild 1839 SHA256 b9e160f993cf3dfb55972cb942c183ae0b37e64a1b6ec63243804ba8a1d0b5ac SHA512 496cd297e3f258970e9857929773cdd63d8bfb318135cd6452e98cec3335421042ce1bd613b8866d2acfedf3d77531f56ef16a5a8dbbd6762157e1820df799e6 WHIRLPOOL 548cb5afabc073489d29d2dd0ba559d546e1f7ad5f605ec668c1600266e169580951ef75f9d87e53ebc5b48553daa5d833f8ccfed7f6ca74ffb76a455103422e
 EBUILD logmein-hamachi-2.1.0.136.ebuild 1838 SHA256 c43d90ae8654528aef8b2f7847a55e0f6907d33eea906bddb7a03a54df8f4413 SHA512 983146de2e4a30667db145c843ad683115e829106a19f705420c92da78dbe31cf8ea5c16f92e39275e3f19280e4012c84ed50e349065cb75585d1ea1364beb44 WHIRLPOOL dc6046b5bca4d882b0316cd195b1a7b3bec2826d911b2da550412517f7d3f33c9b69633523471a37f4099271278931221820d3df1b354abefb6ebf138dfae6cf
-MISC ChangeLog 4241 SHA256 33a931fe4b7a74a6730e498c94a709dc14bedf622d003b7c4cd295befb0f5d2d SHA512 a921edc125eee517f95915072693ca388a69b7e1ee207c99651d198f6a6ed2ed06a814f6b277ed155f065dfcff27f3f981e963ee5e1505c7239c04f317c90572 WHIRLPOOL 2bde5d149b0ff469aecb6f3193a8b6898b1b684ab8efdc974fdd2923ac8f5448191976bbab32792910d2218f90c86f5498842fdf9e651319d00118531f695953
+EBUILD logmein-hamachi-2.1.0.139.ebuild 1834 SHA256 a5011524394f8a51344d811d097a71246b5cd950a8dafbad8fbbb799d217514a SHA512 fe092e323a03df4abee5679cda651d4f930b025cef88347620b4e7c083a52448df7b9ea999a27c70bfb4859e064cef93425c6f05b6b08ef0133e408550e81d4c WHIRLPOOL da2b2a17b013f694a488dd7799fac403de1feacec3729a36a734dde33d7e76052a18ca166d1b685a236a42c4bcdf3423cf2daaa705c15d1bf96d86b3c74b0036
+MISC ChangeLog 4391 SHA256 700a101f4a3caed06e1604b13e6751814fe87bf061ba677aa75a056663d9fa59 SHA512 07a3f10c357b2524d2aea1fc52a9863c7c97f797585b59c4f64a4f6523aafeabbcf9ee383ded815f84dd70efab1233452c7ee1abbe2eb1ac02204c39be8042fd WHIRLPOOL 4769eea49f57c72e67cdcbf66dce623462bc998a45f83086faf013cc823b3ad7cfe26fafe50314d8b0f7d6c239d2cc9f68d4d89acd72c1a1d9b0ef32941d1329
 MISC metadata.xml 271 SHA256 fbb3d4a4ac430596956b69e0435bad93c2a660fa52c7503cefd1d7b615770185 SHA512 8e0d07e4d7817e26452a71f4c35f1becf91c842da68ff67f4f09cb5c6d2d42a60d1cc424118841ce9d891594008de066e823537e69e5d983f056b87ef8a42079 WHIRLPOOL 3c41fce26ea8420680f397d6b68f0b0fd9b4b9c787c2c802535138f73e82db575943ade214f5a29d0447e7e0a532b2451f503b88be1b3499abb9746e1ab4f719
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUmcfhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88flIQAJEsfgHcb9UZ7x04lJ50DNaC
-PtPRRb1AwZlZuhh1tkLXsHYi2nbazjWCGhTj1nQD/PeJ3FXtBBH99zSZGzwK+rVe
-BYo8sWmcq/eXcqQivhR3jB3FKJUaZKKmcimVc0zCTdhjXQ5scYRijAi29mtcm/3w
-mlv4/+ZuqtR/ksbsLWCONr+kFyl5Xe969DkCMojidMmI+STrbi6Q4pki0hiq3Fke
-1a60V+UmvV2oL6K5jqiPnI3D+Big0wx3SG7Ejrjxb5XUfURpZfEkOAtMAc+4kOWz
-hX6Rb4OLWZsxzEdiazaCPnQJFNpvvmqYZ5G5XwMte9jsdG0O+7HSvB/T4Ly3jDGx
-nLI6aYww3mvxzdEuWG+B8bWVcqzfUNGiydU8D51iUWF3u4WSSPluz3ClHrifLpTG
-rOwOiFlAUvaSSNjkmZtnAXO9l5wQBqmsx7qCnJ96ZJeN8CnV90m/EDO5gSsQiNoZ
-lFvM5UTPhDGihZf21cQXWZH8qZ1nkHRZMYDbB5GiT2DVhWt1LgijHbtrR5npPiEb
-8CZEYQaz6Hl+xQPoydCXucQct1QvP3yJ9votbCHSIqoW1lbmSLsJnNtJLlmn59dj
-6GSzcPVVfvhJvoD1Tu9KDz+xfEKhfjhjV30w1i8V5+IY2nFldxZqQrTR+BOCG6uN
-zHFiLIJ9fG5PvWYJEcf5
-=HbjI
+iQJ8BAEBCABmBQJVFo4HXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCNUJBQjhDOUMzMUI3MTE1NjcwMjIzREMz
+MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvta0MP/ivlj+z5zfmHstlKhZ7BQ0Sb
+64FfzUIuXyzXjvnJGxTGzAXnzAwDRq/pKcfx9rExN3njIE9v2Jrf4GbbPRrDFN4g
+4hQAHXnJvw7/71Jkb34obzmp6Xsda16Eo67G/LudFThYix4okrgomCxwculk1BIC
+PRdH+TLI0O+ham8YWSuCBEb4XtNPEXevthvl2Ugic/Vm1YD7pPB51V8l4Ty7+qVU
+eujuOs81m5eLSKU/gMGKRuNHPWYrwwUcYyecSfjnGHnvqp8JrsXXNLIKnukO7q3T
+6pX4wXbFWkEwplaJTcmNTTGyYyI8kY6fvvYNnPPxyatNnErb9RhNNvKs3t1NZ+w4
+QWw7lQgz5LVjMl69kbP9wbkNm/Bjzg68VV3ltA9Q7UeTNquKMMWeBnAEsyMVA6sQ
+WdgkEGvKRQUlx/9sYlOzYzj7hN4zC3bR4UFCQUKDrnA0JPTKyxUeIj93siMlEJ5U
+EptBtxLaiM3CBu5LqcK8gZS480VurXZ1dPmey2uk3ihvjMLF6HE5vefAwhUuwtgV
+ru4TKRKLH+1fQMKcVEuKr+PsHnOGhGhc4SVWfTayyYx908+efoY2BZSw5VFlNW0H
+ujGPVlAKv50M6Dx70t/Y16kQiHBhKezIZO8340bi6j8wHet4Tv4biepVbsBXZAgK
+Ls6YvnJj27s9Q6rc+hDd
+=Wjw8
 -----END PGP SIGNATURE-----
